# Archon

./: .env.example  .env.railway  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  archon.db  docker-compose.yml  fix_db.py  init_db.py  pyproject.toml  railway.json  render.yaml  vercel.json
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
app/api/: auth.py
app/api/v1/: analyze.py  architect.py  dashboard.py  estimate.py  explain.py  models.py  recommend.py  router.py
app/cache/: redis_client.py
app/data/: model_registry.json
app/db/: base.py  session.py
app/observability/: langfuse_tracer.py
app/rag/: bm25_index.py  chunker.py  embedder.py  knowledge_base.py  reranker.py
app/schemas/: __init__.py  analyze.py  architect.py  common.py  estimate.py  explain.py  models.py  recommend.py
app/services/: architecture_generator.py  cost_simulator.py  eval_engine.py  model_registry_service.py  model_strategy.py  reasoning_engine.py  semantic_analyzer.py
app/workers/: celery_app.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
sdk/python/: pyproject.toml
sdk/python/archon/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/typescript/: package.json  tsconfig.json
tests/: conftest.py  test_analyze.py  test_architect.py  test_estimate.py  test_eval_engine.py  test_explain.py  test_models.py  test_rag_engine.py  test_recommend.py  test_semantic_analyzer.py
(+45 files in other folders)
