[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon"
version = "0.1.0"
description = "Python SDK for the Archon AI Systems Design Engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Archon Team" }]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
]
